# my-toolkit

./: LOG_FIX_SUMMARY.md  LOG_VIEWER_README.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.less  App.tsx  Editor.css  Editor.tsx  JsonTool.css  JsonTool.tsx  Title.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: json.rs  kafka.rs  logger.rs  main.rs  storage.rs
src-tauri/src/kafka/: connection.rs  message.rs
src-tauri/src/storage/: sqlite.rs
src/common/Editor/: Editor.less  Editor.tsx
src/common/Message/: Message.less  Message.tsx
src/components/WindowStatus/: WindowStatus.less  WindowStatus.tsx
src/hooks/: useWindowSize.ts
src/pages/DiffTool/: DiffTool.less  DiffTool.tsx
src/pages/EventViewer/: EventViewer.less  EventViewer.tsx
src/pages/JsonTool/: JsonTool.less  JsonTool.tsx
src/pages/KafkaTool/: KafkaTool.less  KafkaTool.tsx
src/pages/Layout/: Layout.css  Layout.less  Layout.tsx
src/pages/LogViewer/: LogViewer.less  LogViewer.tsx
src/pages/Title/: Title.tsx
src/styles/: common.less
src/utils/: EventLogger.ts  JsonUtil.ts
